[gd_scene load_steps=37 format=2]

[ext_resource path="res://EnemyBody2D.gd" type="Script" id=1]
[ext_resource path="res://Enemy/GoblinAnimation/GoblinIdle.png" type="Texture" id=2]
[ext_resource path="res://Enemy/Witch.png" type="Texture" id=3]
[ext_resource path="res://Enemy/Wolf.png" type="Texture" id=4]
[ext_resource path="res://Enemy/GoblinAnimation/Goblin-Walkt.png" type="Texture" id=5]
[ext_resource path="res://Enemy/GoblinAnimation/GoblinTakingDamage-Sheet.png" type="Texture" id=6]
[ext_resource path="res://Enemy/GoblinAnimation/GolbinDie-Sheet.png" type="Texture" id=7]
[ext_resource path="res://Enemy/GoblinAnimation/GoblinAttack-Sheet.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "Goblin_Attack",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "Goblin_Die",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Goblin_Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Goblin_Taking_Damage",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "Goblin_Walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Wizard",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Wolf",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 31.0

[sub_resource type="CapsuleShape2D" id=16]
radius = 27.0
height = 28.0

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.956863, 0.0196078, 0.0196078, 1 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 21, 17 )

[node name="Enemy" type="Node2D"]

[node name="EnemyBody2D" type="KinematicBody2D" parent="."]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="EnemyBody2D"]
frames = SubResource( 1 )
animation = "Goblin_Attack"
frame = 1
speed_scale = 0.8
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyBody2D"]
position = Vector2( 3, -10 )
shape = SubResource( 2 )

[node name="EnemyBodyArea" type="Area2D" parent="EnemyBody2D"]

[node name="EnemyBodyCollision" type="CollisionShape2D" parent="EnemyBody2D/EnemyBodyArea"]
position = Vector2( 2, -11 )
shape = SubResource( 16 )

[node name="ProgressBar" type="ProgressBar" parent="EnemyBody2D"]
margin_left = -19.0
margin_top = -44.0
margin_right = 20.0
margin_bottom = -36.0
custom_styles/fg = SubResource( 17 )
max_value = 3.0
value = 3.0
percent_visible = false

[node name="PlayerAttackArea" type="Area2D" parent="EnemyBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyBody2D/PlayerAttackArea"]
position = Vector2( -11, -7 )
shape = SubResource( 25 )

[connection signal="animation_finished" from="EnemyBody2D/AnimatedSprite" to="EnemyBody2D" method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="EnemyBody2D/EnemyBodyArea" to="EnemyBody2D" method="_on_EnemyBodyArea_area_entered"]
[connection signal="area_entered" from="EnemyBody2D/PlayerAttackArea" to="EnemyBody2D" method="_on_PlayerAttackArea_area_entered"]
[connection signal="area_exited" from="EnemyBody2D/PlayerAttackArea" to="EnemyBody2D" method="_on_PlayerAttackArea_area_exited"]
